--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 <img src="IMG/imagen,section,2.svg" alt="" class="imagen-sobre-pagina">
                 <div class="contenido-textos">
                     <h3><span>1</span>Una pagina para todos</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut dignissimos temporibus
-                        exercitationem, ullam eveniet ipsa cum sapiente excepturi voluptatum at ex laboriosam iusto
-                        dolorum, praesentium odit impedit vel perspiciatis veniam.</p>
+                    <p>Está página es una idea desarrollada por nosotros los estudiantes como un medio para solucionar
+                        aquellas falencias en la educación virtual para todas las personas que lo necesiten, sin importar 
+                        su nivel socioeconmico o nivel de acceso a internet.</p>
                     <h3><span>2</span>Un recurso necesario para los estudiantes</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut dignissimos temporibus
-                        exercitationem, ullam eveniet ipsa cum sapiente excepturi voluptatum at ex laboriosam iusto
-                        dolorum, praesentium odit impedit vel perspiciatis veniam.</p>
+                    <p>Al tener una educación virtual generada por la crisis del COVID-19, los estudiantes
+                        han visto en su educación algunas falencias, por este motivo esta página web ha sido
+                        creada para que esas falencias o dudas pudan ser reforzadas y encontremos la educación de calidad.</p>
                 </div>
             </div>
         </section>
