--- a/mat1.html
+++ b/mat1.html
@@ -26,46 +26,24 @@
         <section class="contenedor">
             <h2 class="titulo">Temas</h2>
             <div class="contenedor-materias">
-                <h3>Tema Numero 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 4</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 5</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 6</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 7</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 8</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 9</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 10</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
+                <div class="imagen-nucleos-dos">
+                    <h3 class="titulo">Funciones</h3>
+                    <p>Lo necesario para entender los temas acerca de funciones, sus caracteristicas
+                        y diferencias con respecto a las relaciones. Como identificar cada una y como analizar
+                        las rectas de una función de manera gráfica.
+                    </p>
+                    <a href="DOCS/1. Funciones 2.pdf" class="link">Funciones</a>
+                    <br>
+                    <a href="https://www.youtube.com/watch?v=Ll7xfe3HoZE&t=2s" class="link">Video de funciones</a>
+                </div>
+                <div class="imagen-nucleos-dos">
+                    <h3 class="titulo">Otro tipo de funciones</h3>
+                    <p>Aparte de las funciones anteriormente vistas podemos analizar otro tipo de funciones las
+                        cuales son necesarias para el análisis matemático.
+                    </p>
+                    <a href="DOCS/3.Funciones.pdf" class="link">Funciones 2</a>
+                </div>                
+                
             </div>
         </section>
     </main>
