--- a/mat1.html
+++ b/mat1.html
@@ -42,8 +42,16 @@
                         cuales son necesarias para el análisis matemático.
                     </p>
                     <a href="DOCS/3.Funciones.pdf" class="link">Funciones 2</a>
-                </div>                
+                </div>
+                <div class="imagen-nucleos-dos">
+                    <h3 class="titulo">Limites</h3>
+                    <p> El concepto de límite sirve como fundamento a nociones
+                         matemáticas comola continuidad, la derivada y la integral.
+                    </p>
+                    <a href="DOCS/4. Límites.pdf" class="link">Límites</a>
+                </div>          
                 
+                <a class="boton" href="index.html">Inicio</a>
             </div>
         </section>
     </main>
