--- a/ingles.html
+++ b/ingles.html
@@ -15,6 +15,7 @@
         <section class="textos-header">
             <h1>Ingles 1</h1>
             <h2>Docente Nancy Sanchez</h2>
+            <h5>©All Rights Reserved</h5>
         </section>
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
                 style="height: 100%; width: 100%;">
@@ -26,46 +27,15 @@
         <section class="contenedor">
             <h2 class="titulo">Temas</h2>
             <div class="contenedor-materias">
-                <h3>Tema Numero 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 4</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 5</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 6</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 7</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 8</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 9</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 10</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
+                <div class="imagen-nucleos-dos">
+                    <h3 class="titulo">Pasado Simple To Be</h3>
+                    <p>Conocemos la forma del verbo to be en su pasado simple, su estructura, forma correcta
+                        en las oraciones en sus formas positivas, negativas e interrogativas.
+                    </p>
+                    <a href="DOCS/ppt past simple verb to be.ppt" class="link">Presentación pasado simple</a>
+                    <br>
+                    <a href="https://www.youtube.com/watch?v=r8Hv3GOv_b0" class="link">Video de pasado simple</a>
+                </div>
             </div>
         </section>
     </main>
