--- a/ingles.html
+++ b/ingles.html
@@ -28,6 +28,25 @@
             <h2 class="titulo">Temas</h2>
             <div class="contenedor-materias">
                 <div class="imagen-nucleos-dos">
+                    <h3 class="titulo">Countables and no countables</h3>
+                    <p>Diferenciamos la manera con la cual nse debe utilizar el How many y how much,
+                        como respondemos utilizando any, some y a lot of, y en que caso se debe de utilzar
+                        cada uno en contables y no contables.
+                    </p>
+                    <a href="DOCS/PPT countable and uncountable nouns.pptx" class="link">Presentación pasado simple</a>
+                    <br>
+                    <a href="https://www.youtube.com/watch?v=WcXgZvTUQ9M" class="link">Video de contables y no contables</a>
+                </div>
+                <div class="imagen-nucleos-dos">
+                    <h3 class="titulo">Verbos regulares e irregulares</h3>
+                    <p>El pasado simple en los verbos que son diferente al verbo to be tienen diferentes maneras de 
+                        escribirse y pronunciarce, veras los verbos regulares e irregulares en su forma pasada.
+                    </p>
+                    <a href="DOCS/ppt past simple verb to be.ppt" class="link">Presentación pasado simple</a>
+                    <br>
+                    <a href="https://www.youtube.com/watch?v=r8Hv3GOv_b0" class="link">Video de pasado simple</a>
+                </div>
+                <div class="imagen-nucleos-dos">
                     <h3 class="titulo">Pasado Simple To Be</h3>
                     <p>Conocemos la forma del verbo to be en su pasado simple, su estructura, forma correcta
                         en las oraciones en sus formas positivas, negativas e interrogativas.
