--- a/ingles.html
+++ b/ingles.html
@@ -42,9 +42,9 @@
                     <p>El pasado simple en los verbos que son diferente al verbo to be tienen diferentes maneras de 
                         escribirse y pronunciarce, veras los verbos regulares e irregulares en su forma pasada.
                     </p>
-                    <a href="DOCS/ppt past simple verb to be.ppt" class="link">Presentación pasado simple</a>
+                    <a href="DOCS/Past simple regular and irregular verbs.pptx" class="link">Verbos regulares e irregulares</a>
                     <br>
-                    <a href="https://www.youtube.com/watch?v=r8Hv3GOv_b0" class="link">Video de pasado simple</a>
+                    <a href="https://www.youtube.com/watch?v=fLHrVG3IpbM" class="link">Video de pasado simple con verbos regulares</a>
                 </div>
                 <div class="imagen-nucleos-dos">
                     <h3 class="titulo">Pasado Simple To Be</h3>
