--- a/algebra.html
+++ b/algebra.html
@@ -26,46 +26,9 @@
         <section class="contenedor">
             <h2 class="titulo">Temas</h2>
             <div class="contenedor-materias">
-                <h3>Tema Numero 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 4</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 5</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 6</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 7</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 8</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 9</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
-                <h3>Tema Numero 10</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, repellendus expedita animi culpa
-                    doloribus tempora nihil aliquid suscipit deserunt accusamus veritatis delectus nisi harum voluptatum
-                    eligendi non eveniet illo distinctio.</p>
+                <div>  
+
+                </div>
             </div>
         </section>
     </main>
@@ -73,11 +36,11 @@
         <div class="contenedor-footer">
             <div class="content-foo">
                 <h4>Correo Institucional</h4>
-                <p>abcd@ucundinamarca.edu.co</p>
+                <p>smazuera@ucundinamarca.edu.co</p>
             </div>
             <div class="content-foo">
                 <h4>Telefonos</h4>
-                <p>123456789-123456789</p>
+                <p>3145749367</p>
             </div>
         </div>
         <h2 class="titulo-final">&copy; Ingenieria de Sistemas | UDEC | Primer Semestre</h2>
