--- a/algebra.html
+++ b/algebra.html
@@ -26,7 +26,17 @@
         <section class="contenedor">
             <h2 class="titulo">Temas</h2>
             <div class="contenedor-materias">
-                <div>  
+                <div class="imagen-nucleos-dos">  
+                    <h3 class="titulo">Determinantes</h3>
+                    <p>Conoceremos los métodos para hallar la determinante de una matriz,
+                        y como esto nos ayudará a conocer su inversa de manera simple y sencilla.
+                    </p>
+                    <a href="DOCS/AL-determinantes.pdf" class="link">Determinantes</a>
+                </div>
+                <div class="imagen-nucleos-dos">
+                    <h3></h3>
+                </div>
+                <div class="imagen-nucleos-dos">
 
                 </div>
             </div>
