--- a/algebra.html
+++ b/algebra.html
@@ -32,6 +32,8 @@
                         y como esto nos ayudará a conocer su inversa de manera simple y sencilla.
                     </p>
                     <a href="DOCS/AL-determinantes.pdf" class="link">Determinantes</a>
+                    <br>
+                    <a href="https://www.youtube.com/watch?v=I-IkZ0zEf4w" class="link">¿Cómo hallar la determinante de una matriz?</a>
                 </div>
                 <div class="imagen-nucleos-dos">
                     <h3></h3>
