--- a/algebra.html
+++ b/algebra.html
@@ -26,20 +26,37 @@
         <section class="contenedor">
             <h2 class="titulo">Temas</h2>
             <div class="contenedor-materias">
-                <div class="imagen-nucleos-dos">  
+                <div class="imagen-nucleos-dos">
+                    <h3 class="titulo">Gauss-Jordan</h3>
+                    <p>Podremos solucionar sistemas de ecuaciones lineales mediante la solución de Gauss-Jordan,
+                        conoceremos como plantear las ecuaciones y como hallar sus soluciones.
+                    </p>
+                    <a href="https://www.aiu.edu/cursos/matematica/pdf%20leccion%203/lecci%C3%B3n%203.4.pdf" class="link">Gauss-Jordan</a>
+                    <br>
+                    <a href="https://www.youtube.com/watch?v=I-IkZ0zEf4w" class="link">¿Cómo hallar la determinante de
+                        una matriz?</a>
+                </div>
+                <div class="imagen-nucleos-dos">
                     <h3 class="titulo">Determinantes</h3>
                     <p>Conoceremos los métodos para hallar la determinante de una matriz,
                         y como esto nos ayudará a conocer su inversa de manera simple y sencilla.
                     </p>
                     <a href="DOCS/AL-determinantes.pdf" class="link">Determinantes</a>
                     <br>
-                    <a href="https://www.youtube.com/watch?v=I-IkZ0zEf4w" class="link">¿Cómo hallar la determinante de una matriz?</a>
+                    <a href="https://www.youtube.com/watch?v=I-IkZ0zEf4w" class="link">¿Cómo hallar la determinante de
+                        una matriz?</a>
                 </div>
                 <div class="imagen-nucleos-dos">
-                    <h3></h3>
-                </div>
-                <div class="imagen-nucleos-dos">
-
+                    <h3 class="titulo">Matriz inversa</h3>
+                    <p>
+                        Una vez conocido el tema de determianntes podemos hallar la matriz
+                        inversa de una función, conoceras como hallarla, sus pasos y diferentes
+                        metodologías y métodos.
+                    </p>
+                    <a href="docs/AL-Matriz-Inversa.pptx" class="link">¿Cómo hallar la matriz inversa?</a>
+                    <br>
+                    <a href="https://www.youtube.com/watch?v=ZDiZUrfG_MI&t=691s" class="link">Video de como hallar la
+                        matriz inversa</a>
                 </div>
             </div>
         </section>
