--- a/algebra.html
+++ b/algebra.html
@@ -33,8 +33,7 @@
                     </p>
                     <a href="https://www.aiu.edu/cursos/matematica/pdf%20leccion%203/lecci%C3%B3n%203.4.pdf" class="link">Gauss-Jordan</a>
                     <br>
-                    <a href="https://www.youtube.com/watch?v=I-IkZ0zEf4w" class="link">¿Cómo hallar la determinante de
-                        una matriz?</a>
+                    <a href="https://www.youtube.com/watch?v=dFmGzr1j6eY" class="link">¿Cómo solucionar el método Gauss-Jordan?</a>
                 </div>
                 <div class="imagen-nucleos-dos">
                     <h3 class="titulo">Determinantes</h3>
