--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
         <div class="contenedor-footer">
             <div class="content-foo">
                 <h4>Correo Institucional</h4>
-                <p>abcd@ucundinamarca.edu.co</p>
+                <p>cfmontejo@ucundinamarca.edu.co</p>
             </div>
             <div class="content-foo">
                 <h4>Telefonos</h4>
-                <p>123456789-123456789</p>
+                <p>3154214724</p>
             </div>
         </div>
         <h2 class="titulo-final">&copy; Ingenieria de Sistemas | UDEC | Primer Semestre</h2>
